--- a/src/NovaTrainingBundle/Resources/views/full/sport.html.twig
+++ b/src/NovaTrainingBundle/Resources/views/full/sport.html.twig
@@ -9,7 +9,7 @@
                 {{ ez_content_name(content) }}
 
 
-            {{ ez_render_field(content, "image") }}</a>
+            {{ ez_render_field(content, "image", {'parameters': {'alias': 'small'}}) }}</a>
 
         {% endfor %}
 
